kubernetese/rest-deploy-service.yml
kind: Service
apiVersion: v1
metadata:
  name: spring-mongo-service
spec:
  selector:
    app: spring-mongo-service
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-mongo-service
spec:
  selector:
      matchLabels:
        app: spring-mongo-service
  replicas: 2
  template:
    metadata:
      labels:
        app: spring-mongo-service
    spec:
      containers:
        - name: spring-mongo-service
          image: tonycav/myrepo:springboot-k8s-mongo-v9
          ports:
          - containerPort: 8080
