kubernetese/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-ingress
spec:
  rules:
  - http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: spring-mongo-service
            port: 
              number: 80
      - path: /connection
        pathType: Prefix
        backend:
          service:
            name: spring-mongo-service
            port: 
              number: 80              
      - path: /addCustomer
        pathType: Prefix
        backend:
          service:
            name: spring-mongo-service
            port: 
              number: 80
      - path: /findCustomer
        pathType: Prefix
        backend:
          service:
            name: spring-mongo-service
            port: 
              number: 80
      - path: /findAllCustomers
        pathType: Prefix
        backend:
          service:
            name: spring-mongo-service
            port: 
              number: 80
